[tool.poetry]
name = "airg-test"
version = "0.1.0"
description = ""
authors = ["jecanizarez <je.canizarez@uniandes.edu.co>"]
readme = "README.md"
packages = [{include = "airg_test"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
black = "^22.12.0"
isort = "^5.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
